--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,67 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main-container{
+    margin: 0px;
+    width: 300px;
+    margin-top: 20px;
+    
+}
+.container{
+    margin-top: 10px;
+    background-color: white;
+    border: 2px solid rgb(98, 255, 0);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.question {
+    /* border: 2px solid rgb(8, 0, 255); */
+    width:100%;
+    font-size: 20px;
+    margin: 3px 5px;
+}
+.option-btn{
+    border-radius: 4px;
+    font-size: 18px;
+    width: 100%;
+    padding: 5px 0px;
+    margin: 2px;
+    background-color: white;
+    border: 1px solid grey;
+}
+.option-container{
+    
+    width: 100%;
+    /* border: 2px solid rgb(255, 0, 238); */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .checked{
-    background-color: brown;
+    background-color: rgb(165, 42, 134);
+}
+.heading-txt{
+    margin: 5px 0px;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    background-color: rgb(255, 68, 0);
+}
+#next-button{
+    background-color:rgba(137, 43, 226, 0.883);
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    border: none;
+    width: 70px;
+    margin: 8px 0px;
+}
+#next-button:hover{
+    cursor: pointer;
+    background-color: blueviolet;
 }
