--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,13 @@ body{
 .container{
     margin-top: 10px;
     background-color: white;
-    border: 2px solid rgb(98, 255, 0);
+    padding: 3px;
+    /* border: 2px solid rgb(98, 255, 0); */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .question {
     /* border: 2px solid rgb(8, 0, 255); */
@@ -43,14 +44,18 @@ body{
     align-items: center;
 }
 .checked{
-    background-color: rgb(165, 42, 134);
+    background-color: rgb(230, 63, 188);
+    color: white;
+    border: none;
 }
 .heading-txt{
     margin: 5px 0px;
     color: white;
     font-size: 30px;
+    padding: 3px 0px;
     text-align: center;
     background-color: rgb(255, 68, 0);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #next-button{
     background-color:rgba(137, 43, 226, 0.883);
